Deep dive: compile/verify Java 43-52, expand DS 31-35, Algo 36-40