@@ -5,47 +5,37 @@ import java.util.*;
 
 /**
  * Programmatic GC logging using ManagementFactory.
- * Listens for GC notifications via GarbageCollectorMXBean.
+ * Reports GC statistics via GarbageCollectorMXBean.
  */
 public class GcLoggingExample {
-
-    private static long totalCollections = 0;
-    private static long totalGcTime = 0;
 
     public static void main(String[] args) throws Exception {
         System.out.println("=== Programmatic GC Logging ===\n");
 
         List<GarbageCollectorMXBean> gcBeans = ManagementFactory.getGarbageCollectorMXBeans();
+        System.out.println("Active GC Collectors:");
         for (var bean : gcBeans) {
-            System.out.println("GC Bean: " + bean.getName());
-        }
-
-        // Register GC notification listener
-        for (var bean : gcBeans) {
-            if (bean instanceof NotificationEmitter emitter) {
-                emitter.addNotificationListener((notification, handback) -> {
-                    if (notification.getType().equals("com.sun.management.gc.notification")) {
-                        long count = ((GarbageCollectorMXBean) handback).getCollectionCount();
-                        long time = ((GarbageCollectorMXBean) handback).getCollectionTime();
-                        System.out.println("[GC Notification] " + notification.getMessage()
-                            + " (collections: " + count + ", time: " + time + " ms)");
-                    }
-                }, null, bean);
-            }
+            System.out.println("  " + bean.getName() + " (collections: " + bean.getCollectionCount()
+                + ", time: " + bean.getCollectionTime() + " ms)");
         }
 
         // Allocate memory to trigger GC
+        System.out.println("\nAllocating memory to trigger GC...");
         List<byte[]> alloc = new ArrayList<>();
+        long totalAllocated = 0;
         for (int i = 0; i < 10_000; i++) {
             alloc.add(new byte[1024 * 100]); // 100 KB
+            totalAllocated += 1024 * 100;
             if (i % 500 == 0) {
-                System.out.println("Allocated " + (i * 100) + " KB");
+                System.out.println("  Allocated " + (totalAllocated / 1024 / 1024) + " MB");
                 Thread.sleep(5);
             }
         }
 
         // Final stats
         System.out.println("\nFinal GC Statistics:");
+        long totalCollections = 0;
+        long totalGcTime = 0;
         for (var bean : gcBeans) {
             System.out.println("  " + bean.getName() + ": " + bean.getCollectionCount()
                 + " collections, " + bean.getCollectionTime() + " ms");
@@ -56,5 +46,6 @@ public class GcLoggingExample {
 
         alloc.clear();
         System.gc();
+        System.out.println("\nRun with -Xlog:gc* to see detailed GC logging");
     }
 }
